--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,7 +18,7 @@ keras>=3.12.0
 librosa>=0.11.0
 soundfile>=0.13.1
 pydub>=0.25.1
-numpy<2.0.0  # NumPy 2.x uyumluluk sorunları için 1.x kullan
+numpy>=1.26.0  # Python 3.13 için numpy 2.x gerekli, TensorFlow uyumluluğu için
 
 # Data Science
 scikit-learn>=1.7.2
