--- a/backend/api/requirements.txt
+++ b/backend/api/requirements.txt
@@ -6,7 +6,8 @@ fastapi==0.121.2
 uvicorn[standard]==0.38.0
 starlette==0.49.3
 
-# Machine Learning & AI
+# Machine Learning & AI - CPU ONLY (daha küçük build size için)
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch>=2.2.1,<3.0.0
 torchaudio>=2.2.1,<3.0.0
 transformers>=4.57.1
