--- a/backend/api/Dockerfile.emotion
+++ b/backend/api/Dockerfile.emotion
@@ -24,9 +24,9 @@ RUN mkdir -p /app/backend/models
 # Working directory
 WORKDIR /app/backend/api
 
-# Port expose et (Railway otomatik atar)
-EXPOSE $PORT
+# Port expose et
+EXPOSE 8001
 
-# Start command
-CMD python -m uvicorn wav2vec_emotion_api:app --host 0.0.0.0 --port ${PORT:-8001}
+# Start command (shell form kullanarak environment variable'ı okuyabiliriz)
+CMD sh -c "python -m uvicorn wav2vec_emotion_api:app --host 0.0.0.0 --port ${PORT:-8001}"
 
