--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,50 +4,65 @@ services:
   speaker-api:
     build:
       context: .
-      dockerfile: Dockerfile.backend
+      dockerfile: backend/api/Dockerfile.speaker
     container_name: speaker-api
     ports:
       - "8000:8000"
     environment:
-      - W2V_CLASSIFIER_PATH=/app/models/wav2vec2_model.h5
-      - W2V_LABELS_PATH=/app/models/classes.npy
-      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:5173}
+      - PORT=8000
+      - CORS_ORIGINS=${CORS_ORIGINS:-http://localhost:5173,http://127.0.0.1:5173}
     volumes:
-      - ./backend:/app/backend
-      - ./models:/app/models
-    command: uvicorn main:app --host 0.0.0.0 --port 8000
+      # Local development için kodları mount ediyoruz (hot reload için)
+      - ./backend/api:/app/backend/api
+      - ./backend/models:/app/backend/models
     working_dir: /app/backend/api
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8000/').read()"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
   emotion-api:
     build:
       context: .
-      dockerfile: Dockerfile.backend
+      dockerfile: backend/api/Dockerfile.emotion
     container_name: emotion-api
     ports:
       - "8001:8001"
     environment:
-      - W2V_CLASSIFIER_PATH=/app/models/wav2vec2_model.h5
-      - W2V_LABELS_PATH=/app/models/classes.npy
+      - PORT=8001
+      - W2V_CLASSIFIER_PATH=/app/backend/models/wav2vec2_model.h5
+      - W2V_LABELS_PATH=/app/backend/models/classes.npy
+      - MODEL_DOWNLOAD_URL=${MODEL_DOWNLOAD_URL:-}
+      - LABEL_DOWNLOAD_URL=${LABEL_DOWNLOAD_URL:-}
     volumes:
-      - ./backend:/app/backend
-      - ./models:/app/models
-    command: uvicorn wav2vec_emotion_api:app --host 0.0.0.0 --port 8001
+      # Local development için kodları mount ediyoruz
+      - ./backend/api:/app/backend/api
+      - ./backend/models:/app/backend/models
     working_dir: /app/backend/api
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "-c", "import urllib.request; urllib.request.urlopen('http://localhost:8001/').read()"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s  # Model indirme için daha fazla süre
 
-  nginx:
-    image: nginx:alpine
-    container_name: nginx-proxy
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./frontend/dist:/var/www/sesleai/frontend/dist:ro
-    depends_on:
-      - speaker-api
-      - emotion-api
-    restart: unless-stopped
+  # Nginx opsiyonel - sadece production'da gerekli
+  # nginx:
+  #   image: nginx:alpine
+  #   container_name: nginx-proxy
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #     - ./frontend/dist:/usr/share/nginx/html:ro
+  #   depends_on:
+  #     - speaker-api
+  #     - emotion-api
+  #   restart: unless-stopped
+
 
 
